--- a/style.css
+++ b/style.css
@@ -1,1 +1,9 @@
-body{background-color: aqua;}
+body{ 
+    background-color: gray;
+    font-size: 16px;
+     text-align: center;}
+
+.negrito{color: red;
+}
+
+.imagem{width: 100%;}
