--- a/style.css
+++ b/style.css
@@ -1,9 +1,16 @@
-body{ 
-    background-color: gray;
-    font-size: 16px;
-     text-align: center;}
+body{  font-size: 16px;
+     }
+
+.principal{ background-color: gray;
+    text-align: center;}
 
 .negrito{color: red;
 }
 
+.beneficio{text-align: center;}
+
+.imagem-beneficio{width: 100%;}
+
 .imagem{width: 100%;}
+
+.titulo{ padding: 20px;}
